# nam_causal-head-gating

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
notebooks/: chg_example.ipynb  config.yaml
notebooks/datasets/: aba_abb.ipynb  math.ipynb
slurm/: README.md  config_example.yaml  job_example.slurm  run_chg_example.py  setup_env.sh
src/causal_head_gating/: __init__.py  api.py
src/causal_head_gating/analysis/: __init__.py  masks.py
src/causal_head_gating/core/: __init__.py  chg.py  trainer.py
src/causal_head_gating/data/: __init__.py  datasets.py  formatters.py  tokenization.py
src/causal_head_gating/models/: __init__.py  adapters.py
src/causal_head_gating/utils/: __init__.py  helpers.py  tensor_dict.py
tests/: __init__.py  test_imports.py
