[project]
name = "nam-causal-head-gating"
version = "0.1.0"
description = "A framework for interpreting attention head roles in transformers via causal gating"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrew Nam", email = "andrewnam@princeton.edu"},
    {name = "Jonathan Hanke", email = "jonhanke@princeton.edu"},
]
maintainers = [
    {name = "Jonathan Hanke", email = "jonhanke@princeton.edu"},
]
keywords = [
    "transformers",
    "interpretability",
    "attention",
    "mechanistic interpretability",
    "llm",
    "deep learning",
    "pytorch",
    "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.20.0",
    "einops>=0.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotnine>=0.12.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
]
datasets = [
    "datasets>=2.14.0",
]
all = [
    "nam-causal-head-gating[dev,viz,datasets,notebooks]",
]

[project.urls]
Homepage = "https://github.com/jonhanke/nam_causal-head-gating"
Documentation = "https://github.com/jonhanke/nam_causal-head-gating#readme"
Repository = "https://github.com/jonhanke/nam_causal-head-gating"
Issues = "https://github.com/jonhanke/nam_causal-head-gating/issues"
Changelog = "https://github.com/jonhanke/nam_causal-head-gating/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_head_gating"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/notebooks",
    "/slurm",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/environment.yml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["causal_head_gating"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/causal_head_gating"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
